--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="header">
             <h1>Today is the birthday of Otto von Bismarck 🎉</h1>
-            <img id="bff-img" src="img/headshot.JPG">
+            <img id="bff-img" src="https://github.com/sjs-code-foundry/bismarck-bday/blob/main/img/headshot.jpg?raw=true">
             <h2 id="bday-age">Died aged 83</h2>
             <h4 id="bday-date">01.04.1815</h4>
         </div>
